<resources>
    <string name="app_name">Time Chunk</string>
    <string name="app_subtitle">Task and Time Manager App</string>

    <string name="label_sizes_pp">PP</string>
    <string name="label_sizes_p">P</string>
    <string name="label_sizes_m">M</string>
    <string name="label_sizes_g">G</string>
    <string name="label_sizes_gg">GG</string>
    <string name="button_label_cancel">Cancelar</string>
    <string name="button_label_start">Iniciar</string>
    <string name="button_label_sort_and_confirm">Ordenar e Aplicar</string>

    <string name="button_label_cancel_break">Cancelar Intervalo</string>
    <string name="button_label_start_break">Intervalo</string>
    <string name="init_timer_time">00:00:00</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_timer_size_preference">Timer Sizes</string>
    <string name="title_chunk_full_time">Tempo de um chunk inteiro</string>
    <string name="summary_chunk_full_time">Tempo do maior chunk</string>
    <string name="title_chunk_other_time_sizes">Tempo dos outros chunks</string>
    <string name="title_break_time">Tempo de Intervalo</string>
    <string name="title_new_task">Nova Tarefa</string>
    <string name="title_edit_task">Editar Tarefa</string>
    <string name="title_select_task">Selecionar Tarefa</string>
    <string name="title_task_infos">Histórico da Tarefa</string>
    <string name="title_task_estimation">Estimativas</string>


    <string name="category_title_time_settings">Time Settings</string>
    <string name="settings">Preferências</string>
    <string name="pref_title_intermediary_sizes">Tamanhos intermediários</string>
    <string name="tag_size_index_4">4</string>
    <string name="tag_size_index_3">3</string>
    <string name="tag_size_index_2">2</string>
    <string name="tag_size_index_1">1</string>
    <string name="tag_size_index_0">0</string>
    <string name="tag_ringing_timer">0</string>
    <string name="tag_ringing_breaktime">1</string>
    <string name="tag_ringing_tick">2</string>
    <string name="label_task_time">Tarefa</string>


    <string name="label_task">Tarefa: </string>
    <string name="message_hint_workunit_without_task">(Sem tarefa) </string>
    <string name="message_hint_choose_task">Clique para escolher ou adicionar uma tarefa</string>
    <string name="message_hint_choose_period">Periodo</string>
    <string name="label_hint_done_estimation">Realizado / Estimado</string>
    <string name="message_hint_no_task">Sem tarefa</string>

    <string name="message_exit_app">Tem certeza que deseja sair do App?</string>



    <string name="message_title_timer_running">Timer em execução</string>

    <string name="message_toolbar_subtitle_timer_running">Timer de %s em execução: %s%%</string>

    <string name="message_toolbar_subtitle_break_running">Intervalo de %s em execução: %s%%</string>


    <string name="message_title_timer_running_break">Em intervalo</string>
    <string name="message_content_title_timer_running">Matenha o foco!</string>
    <string name="message_content_timer_running_break">Descanse!</string>

    <string name="message_title_timer_finish">Timer finalizado</string>
    <string name="message_title_breaktimetime_finish">Intervalo finalizado</string>
    <string name="message_content_timer_finish">Hora de descansar!</string>
    <string name="message_select_timer_">Selecione o timer:</string>
    <string name="message_select_breaktime_">
        Selecione um dos últimos intervalos usados:
    </string>
    <string name="message_click_select_task">Selecionar Tarefa</string>

    <string name="message_chunk_finish"><![CDATA[
        Parabéns! você finalizou um timer de tamanho <b> %s </b> de <b> %s</b> para a tarefa <b><i> %s <i></b>]]></string>

    <string name="message_chunk_finish_without_task"><![CDATA[
        Parabéns! você finalizou um timer de tamanho <b> %s </b> de <b> %s</b>]]></string>

    <string name="message_breaktime_finish"><![CDATA[
        Você finalizou um intervalo de <b>%s</b>.]]></string>

    <string name="message_title_timer_break_finish">Intervalo acabou</string>
    <string name="message_content_timer_break_finish">Hora de voltar ao trabalho!</string>
    <string name="message_task_archived">Task foi arquivada</string>
    <string name="message_action_undo">Desfazer</string>
    <string name="message_task_unarchived">Task foi desarquivada</string>
    <string name="message_content_slice_of_size_time">Timer de tamanho <b>%s</b> de <b>%s</b></string>

    <string name="message_error_input_break_time_empty">Informe o número de minutos</string>
    <string name="message_error_input_taskname_empty">Informe o nome da task</string>
    <string name="message_error_input_break_time_minutes_less_equal_zero">Número de minutos não pode ser menor ou igual a 0</string>
    <string name="message_error_time_empty">Informe o número de minutos</string>

    <string name="message_error_required_sorted_sizes">Tempos devem estar ordenados do menor para o maior.</string>
    <string name="button_label_sort">Ordenar</string>


    <string name="dialog_title_interval_time">Duração do Intervalo</string>
    <string name="dialog_message_set_interval_time">Duração do Intervalo em Minutos</string>

    <string name="dialog_title_sizes">Duração dos Timers</string>
    <string name="dialog_message_sizes">Escolha o tempo em minutos para cada timer</string>
    <string name="dialog_button_label_restore_defaults">Restaurar padrão</string>
    <string name="dialog_textfield_hint_interval_time">Tempo de Intervalo</string>
    <string name="dialog_textfield_hint_task_name">Nome</string>
    <string name="dialog_textfield_hint_task_desc">Descrição</string>
    <string name="label_period_today">Hoje</string>
    <string name="label_period_this_week">Esta semana</string>
    <string name="label_period_last_7_days">Últimos 7 dias</string>
    <string name="label_period_last_30_days">Últimos 30 dias</string>
    <string name="label_period_this_month">Este mês</string>
    <string name="label_period_all">Todos</string>
    <string name="label_view_archived_tasks">Ver tarefas arquivadas</string>

    <string name="label_time_timer">Tempo do timer:</string>
    <string name="label_time_break">Tempo do intervalo:</string>
    <string name="label_sound_timer">Toque do timer:</string>
    <string name="label_sound_breaktime">Toque do intervalo:</string>
    <string name="label_size">Tamanho do timer: </string>
    <string name="label_timer_">Timer:</string>
    <string name="label_breaktime_">Intervalo:</string>
    <string name="label_timer">Timer</string>
    <string name="label_breaktime">Intervalo</string>



    <plurals name="minutes">
        <item quantity="one">%d minuto</item>
        <item quantity="other">%d minutos</item>
    </plurals>

    <string name="label_ringing">Toques</string>
    <string name="label_ringing_timer">Timer</string>
    <string name="label_ringing_breaktime">Intervalo</string>
    <string name="label_ringing_tick">Tick</string>

    <string name="label_menu_setup_timer">Configurar Timers</string>
    <string name="label_menu_setup_breaktime">Configurar Intervalo</string>
    <string name="label_menu_settings">Preferências</string>
    <string name="label_menu_about">About</string>
    <string name="label_menu_action_filter">Filter</string>

    <string name="label_format_symbol_equal">= %d</string>
    <string name="label_symbol_equal">=</string>
    <string name="label_format_abbrev_minutes">+%d</string>
    <string name="label_format_abbrev_of_min"> %dm</string>
    <string name="label_format_equal_total_time">%s</string>
    <string name="label_format_abbrev_times">%d x</string>
    <string name="label_of">of</string>
    <string name="label_format_summary_period_time">%s: %s</string>
    <string name="label_format_created_at">Criada em: %s</string>



    <string name="label_message_noitems">Nenhuma</string>
    <string name="message_content_empty">Não há items</string>
    <string name="label_done">Realizado:</string>
    <string name="label_estimation">Estimativa:</string>
    <string name="symbol_no_data">-</string>

    <string name="nothing_yet">Nenhum Ainda</string>
    <string name="label_done_estimation">* Realizado / Estimado</string>
    <string name="nothing_yet_fem">Nenhuma Ainda</string>
    <string name="content_description_size0">Timer tamanho PP</string>
    <string name="content_description_size1">Timer tamanho P</string>
    <string name="content_description_size2">Timer tamanho M</string>
    <string name="content_description_size3">Timer tamanho G</string>
    <string name="content_description_size4">Timer tamanho GG</string>
    <string name="content_description_size_bar">Lista de timers por tamanho</string>
    <string name="content_description_setup_timers_values">Configurar timers</string>
    <string name="content_description_setup_break_values">Configurar intervalo</string>
    <string name="content_description_setup_app">Configurações gerais</string>
    <string name="content_description_clear_task">Limpar campo de tarefas</string>
    <string name="content_description_more_info">Mais informações</string>
    <string name="content_description_archive_task">Arquivar Tarefa</string>
    <string name="content_description_plan_task">Planejar Tarefa</string>
    <string name="content_description_expand_collapse">Expand / Collapse</string>
    <string name="label_total">Total:</string>
    <string name="label_drag">Arraste:</string>
    <string name="label_drag_to_here">Arraste aqui para adicionar tempo às estimativas</string>
    <string name="label_edit_mode">Modo de edição</string>
    <string name="loren">Lorem Ipsum is simply dummy text of the printing and typesetting industry.              Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,              when an unknown printer took a galley of type and scrambled it to make a type specimen book.              It has survived not only five centuries, but also the leap into electronic typesetting,              remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset              sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Why do we use it?</string>

    <plurals name="label_format_hours">
        <item quantity="one">%s hour</item>
        <item quantity="other">%s hours</item>
    </plurals>





</resources>


