<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/category_title_time_settings"
        app:key="timerSettings"

        >

        <SeekBarPreference
            android:defaultValue="60"
            android:key="key_chunk_full_time"
            android:max="120"
            android:title="@string/title_chunk_full_time"
            app:min="50"
            app:showSeekBarValue="true"
            app:seekBarIncrement="10"

            />

        <Preference
            android:key="key_other_chunk_sizes"
            android:title="@string/title_chunk_other_time_sizes">


        </Preference>


        <!--
                <SeekBarPreference
                    android:defaultValue="18"
                    android:key="key_chunk_min_time"
                    android:max="36"
                    android:title="@string/title_chunk_min_time"
                    app:min="15"

                    app:showSeekBarValue="true" />
        -->


    </PreferenceCategory>


</PreferenceScreen>