<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:minHeight="56dp">


        <TextView
            android:id="@+id/txt_task_desk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textAppearance="?textAppearanceBody1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Implementar testes unitarios e validar execução de testes funcionais" />


        <ImageButton
            android:id="@+id/btnInfo"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_more_info"


            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/txtLabelDone"
            app:layout_constraintStart_toStartOf="@+id/txt_task_desk"
            app:layout_constraintTop_toTopOf="@+id/txtLabelDone"
            app:srcCompat="@drawable/ic_info_black_24dp" />

        <ImageButton
            android:id="@+id/btnArchive"


            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            android:layout_marginBottom="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"

            android:contentDescription="@string/content_description_archive_task"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"


            app:layout_constraintStart_toStartOf="@+id/txt_task_desk"
            app:layout_constraintTop_toBottomOf="@+id/div2"
            app:srcCompat="@drawable/ic_archive_black_24dp" />


        <ImageButton
            android:id="@+id/btnEstimate"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_plan_task"

            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/txtLabelEstimation"
            app:layout_constraintStart_toStartOf="@+id/txt_task_desk"
            app:layout_constraintTop_toTopOf="@+id/txtLabelEstimation"
            app:srcCompat="@drawable/ic_assignment_black_24dp" />

        <View
            android:id="@+id/div2"
            style="@style/divider"
            android:layout_width="0dp"


            android:layout_height="1dp"

            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/txt_estimation"
            app:layout_constraintStart_toStartOf="@+id/txt_task_desk"
            app:layout_constraintTop_toBottomOf="@+id/btnEstimate" />


        <View
            android:id="@+id/div1"
            style="@style/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"


            android:layout_marginTop="8dp"

            app:layout_constraintEnd_toStartOf="@+id/txtButtonExpand"
            app:layout_constraintStart_toStartOf="@+id/txt_task_desk"
            app:layout_constraintTop_toBottomOf="@+id/txtCreatedAt" />

        <ImageButton
            android:id="@+id/txtButtonExpand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"

            android:contentDescription="@string/content_description_expand_collapse"
            android:focusable="true"

            android:padding="@dimen/padding_small"


            app:layout_constraintBottom_toBottomOf="@+id/div1"


            app:layout_constraintEnd_toEndOf="@+id/txt_task_desk"
            app:layout_constraintTop_toTopOf="@+id/div1"
            app:srcCompat="@drawable/ic_expand_more_black_24dp" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtCreatedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"

            android:alpha="?alphaEmphasisDisabled"
            app:layout_constraintStart_toStartOf="@+id/txt_task_desk"
            app:layout_constraintTop_toBottomOf="@+id/txt_task_desk"
            tools:text="Dom, 08/12/2019 - 16:00" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtLabelDone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="?alphaEmphasisDisabled"
            android:gravity="start|center_vertical"
            android:padding="8dp"
            android:text="@string/label_done"

            app:layout_constraintStart_toEndOf="@+id/btnInfo"
            app:layout_constraintTop_toBottomOf="@+id/txtButtonExpand" />

        <com.google.android.material.textview.MaterialTextView

            android:id="@+id/txt_done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/nothing_yet"
            app:layout_constraintBottom_toBottomOf="@+id/txtLabelDone"
            app:layout_constraintStart_toEndOf="@id/barrier"
            tools:text="02 h" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtLabelEstimation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:alpha="?alphaEmphasisDisabled"

            android:gravity="start|center_vertical"

            android:padding="8dp"
            android:text="@string/label_estimation"


            app:layout_constraintStart_toEndOf="@+id/btnEstimate"
            app:layout_constraintTop_toBottomOf="@+id/txtLabelDone" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_estimation"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"

            android:gravity="start"
            android:padding="8dp"
            android:text="@string/nothing_yet_fem"


            app:layout_constraintBottom_toBottomOf="@+id/txtLabelEstimation"
            app:layout_constraintStart_toEndOf="@id/barrier" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="8dp"
            android:visibility="gone"
            app:constraint_referenced_ids="txtLabelDone,txtLabelEstimation,div2,txt_estimation,txt_done,btnInfo,btnEstimate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:barrierDirection="end"
            app:constraint_referenced_ids="txtLabelEstimation,txtLabelDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
